name:                diagrams-contrib
version:             1.4.4
synopsis:            Collection of user contributions to diagrams EDSL
description:         A collection of user contributions for diagrams,
                     an embedded domain-specific language for generation
                     of vector graphics.
homepage:            http://projects.haskell.org/diagrams/
license:             BSD3
license-file:        LICENSE
author:              Various
maintainer:          Various; see individual modules
Bug-reports:         http://github.com/diagrams/diagrams-contrib/issues
category:            Graphics
build-type:          Simple
cabal-version:       1.18
extra-source-files:  README.markdown, CHANGES.markdown, diagrams/*.svg, CONTRIBUTORS
extra-doc-files:     diagrams/*.svg
tested-with:         GHC ==7.10.3 || ==8.0.2 || ==8.2.2 || ==8.4.3 || ==8.6.5 || ==8.8.1
Source-repository head
  type:     git
  location: http://github.com/diagrams/diagrams-contrib.git

library
  ghc-options:         -Wall
  exposed-modules:     Diagrams.Anchors,
                       Diagrams.Color.HSV,
                       Diagrams.Color.XKCD,
                       Diagrams.Example.Logo,
                       Diagrams.Layout.Wrap,
                       Diagrams.Lens,
                       Diagrams.TwoD.Apollonian,
                       Diagrams.TwoD.Factorization,
                       Diagrams.TwoD.Grid,
                       Diagrams.TwoD.Tilings,
                       Diagrams.TwoD.Sunburst,
                       Diagrams.TwoD.Layout.Constrained,
                       Diagrams.TwoD.Layout.Grid,
                       Diagrams.TwoD.Layout.Tree,
                       Diagrams.TwoD.Layout.CirclePacking,
                       Diagrams.TwoD.Path.Boolean,
                       Diagrams.TwoD.Path.Calligraphic,
                       Diagrams.TwoD.Path.Follow,
                       Diagrams.TwoD.Path.IntersectionExtras
                       Diagrams.TwoD.Path.IteratedSubset,
                       Diagrams.TwoD.Path.LSystem,
                       Diagrams.TwoD.Path.Turtle,
                       Diagrams.TwoD.Path.Turtle.Aliases,
                       Diagrams.TwoD.Path.Turtle.Internal
                       Diagrams.TwoD.Path.Metafont
                       Diagrams.TwoD.Path.Metafont.Types
                       Diagrams.TwoD.Path.Metafont.Internal
                       Diagrams.TwoD.Path.Metafont.Combinators
                       Diagrams.TwoD.Path.Metafont.Parser
  build-depends:       base >= 4.8,
                       mtl >= 2.0,
                       mtl-compat >= 0.2.1,
                       containers > 0.4,
                       split >= 0.2.1,
                       colour >= 2.3.1,
                       split >= 0.2.1,
                       monoid-extras >= 0.4.2,
                       diagrams-core >= 1.4,
                       diagrams-lib >= 1.4,
                       diagrams-solve >= 0.1,
                       lens >= 4.0,
                       linear >= 1.11.3,
                       force-layout >= 0.4,
                       data-default >= 0.5.2,
                       MonadRandom >= 0.1.8,
                       random >= 1.0,
                       circle-packing >= 0.1,
                       parsec >= 3.1,
                       text >= 0.11,
                       data-default-class < 0.2,
                       semigroups >= 0.3.4,
                       cubicbezier >= 0.6,
                       hashable >= 0.1.2,
                       mfsolve >= 0.3
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite turtle-tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      src tests
  Main-is:             TestSuite.hs
  ghc-options:         -Wall

  other-modules:       Diagrams.TwoD.Path.Turtle.Tests
                       Diagrams.TwoD.Path.Turtle.Internal

  build-depends:       HUnit                      >= 1.2,
                       QuickCheck,
                       containers                 >= 0.3,
                       test-framework             >= 0.4,
                       test-framework-hunit       >= 0.2,
                       test-framework-quickcheck2 >= 0.2,
                       base,
                       diagrams-lib >= 1.4

  default-language:    Haskell2010
